--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         </style> 
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-     <title></title>
+     <title>Xen</title>
+     <link rel="icon" sizes="96x96" type="image/x-icon" href="/images/logo.svg">
 </head>
 
 <style>
@@ -24,7 +25,10 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        
     }
+
+    img{    pointer-events: none;}
 
     body
     {
