--- a/index.html
+++ b/index.html
@@ -355,7 +355,9 @@
                 </a>
             </li>
             <li class="nav-img">
-                <img src="/images/logo.svg" width="100px " alt="">
+                <a href="#home">
+                    <img src="/images/logo.svg" width="100px " alt="">
+                </a>
 
             </li>
 
@@ -366,7 +368,7 @@
             </li>
         </ul>
     </nav>
-    <header class="header">
+    <header id="header" class="header">
         <div class="header-content">
             <img class="header-img" src="/images/Group.svg" alt="">
             <h2 class="header-title"> LMITI  <img src="/images/infinity.svg" alt=""> SERVICES</h2>
