--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
     }
 
-    img{    pointer-events: none;}
+
 
     body
     {
@@ -220,7 +220,6 @@
         color: #fff;
         align-items: center;
         box-shadow: 0px 5px 7px -6px rgba(0,0,0,0.75);
-
         justify-content: space-evenly;
      
 
@@ -368,7 +367,7 @@
             </li>
         </ul>
     </nav>
-    <header id="header" class="header">
+    <header id="home" class="header">
         <div class="header-content">
             <img class="header-img" src="/images/Group.svg" alt="">
             <h2 class="header-title"> LMITI  <img src="/images/infinity.svg" alt=""> SERVICES</h2>
